--- a/alabaster/config.html
+++ b/alabaster/config.html
@@ -5,7 +5,7 @@
   "logo_title": e.logo_title               | default(c.site_name),
   "logo_name": e.logo_name                 | default(false),
   "include_toc": e.include_toc             | default(true),
-  "extra_nav_links": e.extra_nav_links     | default({}),
+  "extra_nav_links": e.extra_nav_links     | default({"Github":"https://github.com/wzdbsss/"}),
   "show_powered_by": e.show_powered_by     | default(false),
   "sidebars": e.sidebars                   | default(["toc"]),
   "homepage_nav": e.homepage_nav           | default(false),
